<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ЯСоздал</string>
    <string name="menu_font">Roboto-Regular.ttf</string>
    <string name="db_name">ICreatedDB</string>
    <string name="icon_font">FontAwesome.ttf</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="event_description">Описание события</string>
    <string name="action_new">Новое событие</string>
    <string name="save_event">Сохранить событие</string>
    <string name="events">События</string>
    <string name="friends">Друзья</string>
    <string name="close">Закрыть</string>
    <string name="user_name">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register">Создаться</string>
    <string name="log_in">Войти</string>
    <string name="error">Ошибка</string>
    <string name="unexpected_error">ups...</string>
    <string name="show">Просмотр</string>
    <string name="past_event_toast">Ты опоздал! Попробуй еще раз :)</string>
    <string name="dialog_photo">Откуда взять фото?</string>
    <string name="dialog_category">Выбери категорию события</string>
    <string name="dialog_date">Укажите дату</string>
    <string name="dialog_time">А теперь время</string>
    <string name="ok">OK</string>
    <string name="map">Карта</string>
    <string name="list">Список</string>
    <string name="friends_event">Только для друзей</string>
    <string name="for_all_event">Для всех</string>
    <string name="show_event">Просмотр события</string>
    <string name="choose_event_location">Выбор местоположения события</string>
    <string name="new_event">Новое событие</string>
    <string name="action_hide">Скрыть панель</string>
    <string name="action_anchor_enable">Шаверма!</string>
    <string name="action_anchor_disable">Шаурма!</string>
    <string name="hello">приветики</string>
    <string name="follow">реклама</string>
    <string name="action_show">гульчатай!</string>
    <string name="set_date">ОК</string>
    <string name="set_time">ОК</string>
</resources>
