<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/btnSaveEvent"
          android:icon="@drawable/complete_grey"
          android:title="@string/save_event"
          android:enabled="false"
          app:showAsAction="ifRoom" />
</menu>