<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <include layout="@layout/toolbar"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/user_name"
            android:ems="10"
            android:id="@+id/userName"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordConfirm"/>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/btnRegister" android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:id="@+id/btnSignIn"
                android:layout_alignParentTop="true" android:layout_toRightOf="@+id/btnRegister"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="На Карту"
                android:id="@+id/btnToMap"
                android:layout_gravity="right" android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>